# AdventOfCOde

./: .gitignore  README.md  fetch_data
2021/src/: main.rs  utils.rs
rust/2021/: Cargo.toml
rust/2021/src/: main.rs
rust/aoc2021/src/: mod.rs  utils.rs
