[package]
name = "advent_of_code"
version = "0.1.1"
edition = "2021"
author = "Jonas Jonker <jonasjonker@gmail.com>"
description = "Collections of solutions to Advent of Code Problems."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
